--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "antd": "^5.12.7",
     "dayjs": "^1.11.10",
+    "formik": "^2.4.5",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
